INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include /usr/include/pgsql /usr/include/pgsql/libpq)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

IF (FLTK_FLAG)

    INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
    LINK_DIRECTORIES (${FLTK_LIB_DIR})

    LINK_LIBRARIES (sputil5 sptk5 spdb5 ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES})
    IF (UNIX)
        LINK_LIBRARIES (pthread rt)
    ENDIF (UNIX)

    SET (DATASOURCE_EXAMPLE directory_ds imap_ds)

    FOREACH (DS_TEST ${DATASOURCE_EXAMPLE})
        IF (WIN32)
            ADD_EXECUTABLE (${DS_TEST} WIN32 ${DS_TEST}.cpp)
        ELSE (WIN32)
            ADD_EXECUTABLE (${DS_TEST} ${DS_TEST}.cpp)
        ENDIF (WIN32)
        TARGET_LINK_LIBRARIES (${DS_TEST} sputil5)
    ENDFOREACH (DS_TEST)

    INSTALL(TARGETS ${DATASOURCE_EXAMPLE}
        RUNTIME DESTINATION lib/sptk5/bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
    )

ENDIF (FLTK_FLAG)
