INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

LINK_LIBRARIES (sputil5)
IF (UNIX)
    LINK_LIBRARIES (pthread)
ENDIF (UNIX)

FOREACH (JSON_TEST json_test1 json_test2 json_test3)
    ADD_EXECUTABLE (${JSON_TEST} ${JSON_TEST}.cpp)
ENDFOREACH (JSON_TEST)
