INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

SET (THREADS_TESTS semaphore thread_test thread_pool_test)

FOREACH (THREADS_TEST ${THREADS_TESTS})

    ADD_EXECUTABLE (${THREADS_TEST} ${THREADS_TEST}.cpp)
    IF (WIN32)
      TARGET_LINK_LIBRARIES (${THREADS_TEST} sputil5)
    ELSE (WIN32)
      TARGET_LINK_LIBRARIES (${THREADS_TEST} sputil5 rt)
    ENDIF (WIN32)

ENDFOREACH (THREADS_TEST)

INSTALL(TARGETS ${THREADS_TESTS}
    RUNTIME DESTINATION lib/sptk5/bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
  )

