INCLUDE_DIRECTORIES (${SPTK_SOURCE_DIR})
INCLUDE_DIRECTORIES (/usr/local/include)

LINK_DIRECTORIES (${SPTK_BINARY_DIR})

LINK_LIBRARIES (sputil5 ${SOCKET_LIBRARY})
IF (UNIX)
    LINK_LIBRARIES (pthread rt)
ENDIF (UNIX)

IF (FLTK_FLAG)
    INCLUDE_DIRECTORIES (${FLTK_INCLUDE_DIR})
    LINK_DIRECTORIES (${FLTK_LIB_DIR})
    ADD_EXECUTABLE (xml_test1 xml_test1.cpp)
    TARGET_LINK_LIBRARIES (xml_test1 sputil5 sptk5 spdb5 ${SOCKET_LIBRARY} ${FLTK_LIBRARIES} ${ASPELL_LIBRARIES})
ENDIF (FLTK_FLAG)

ADD_EXECUTABLE (xml_test2 xml_test2.cpp)
TARGET_LINK_LIBRARIES (xml_test2 sputil5)

ADD_EXECUTABLE (xml_test3 xml_test3.cpp)
TARGET_LINK_LIBRARIES (xml_test3 sputil5)
