IF (GTEST_FLAG)
    ADD_LIBRARY (sptest ${LIBRARY_TYPE} TestRunner.cpp)
    SET_TARGET_PROPERTIES(sptest PROPERTIES SOVERSION ${SOVERSION} VERSION ${VERSION})

    INSTALL(TARGETS sptest RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)

    ADD_EXECUTABLE(unit_tests unit_tests.cpp)
    TARGET_LINK_LIBRARIES(unit_tests sputil5 spdb5 sptest gtest)
ENDIF()
